Poprawa layout-u każdego z dashboardów

--- a/app/src/main/res/layout/ble_measure.xml
+++ b/app/src/main/res/layout/ble_measure.xml
@@ -13,7 +13,9 @@
         android:layout_height="wrap_content"
         android:typeface="sans"
         android:gravity="center"
-        android:text="@string/pomiary_ble"
+        android:textColor="#4E057E"
+        android:textStyle="bold"
+        android:text="@string/ble_measure"
         android:textSize="24sp"
         android:layout_marginTop="16dp"
         app:layout_constraintTop_toTopOf="parent"
