--- a/app/src/main/res/layout/manual_measure.xml
+++ b/app/src/main/res/layout/manual_measure.xml
@@ -11,7 +11,9 @@
         android:id="@+id/headerTextView"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="@string/pomiary_r_czne"
+        android:text="@string/manual_measure"
+        android:textColor="#4E057E"
+        android:textStyle="bold"
         android:textSize="24sp"
         android:layout_marginTop="16dp"
         android:typeface="sans"
@@ -36,6 +38,7 @@
         android:id="@+id/selectedDateTextView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:textColor="#000000"
         android:typeface="sans"
         android:text=""
         android:textSize="16sp"
@@ -48,6 +51,7 @@
         android:id="@+id/recyclerView"
         android:layout_width="match_parent"
         android:layout_height="0dp"
+        android:textColor="#000000"
         app:layout_constraintBottom_toTopOf="@+id/buttonsLayout"
         app:layout_constraintTop_toBottomOf="@+id/selectDateButton"
         app:layout_constraintVertical_bias="0.0"
@@ -105,6 +109,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text=""
+        android:textColor="#000000"
         android:typeface="sans"
         android:textSize="16sp"
         app:layout_constraintEnd_toEndOf="parent"
