--- a/app/src/main/res/layout/download_results.xml
+++ b/app/src/main/res/layout/download_results.xml
@@ -1,36 +1,56 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:background="#888A66CD"
-    android:orientation="vertical"
     android:padding="16dp">
+
+    <TextView
+        android:id="@+id/headerTextView"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="16dp"
+        android:gravity="center"
+        android:text="@string/download_results"
+        android:textColor="#4E057E"
+        android:textSize="24sp"
+        android:textStyle="bold"
+        android:typeface="sans"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
         android:id="@+id/sessionLabelTextView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:typeface="sans"
-        android:text="Wybierz numer ID sesji pomiarowej"
+        android:text="Wybierz numer ID sesji pomiarowej  do pobrania na Twój prywatny Google Drive w postaci pliku JSON:"
         android:gravity="center"
         android:textSize="18sp"
-        android:layout_marginTop="16dp" />
+        android:layout_marginTop="16dp"
+        android:layout_below="@+id/headerTextView" />
 
     <Spinner
         android:id="@+id/downloadSessionSpinner"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:typeface="sans"
-        android:layout_marginTop="8dp" />
+        android:layout_marginTop="8dp"
+        android:layout_below="@+id/sessionLabelTextView" />
 
-
-    <Button
-        android:id="@+id/downloadResultsBackButton"
+    <TextView
+        android:id="@+id/downloadLabelTextView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:text="Pobieranie"
         android:typeface="sans"
-        android:text="POWRÓT"
-        android:layout_marginTop="16dp" />
+        android:textSize="20sp"
+        android:layout_marginTop="16dp"
+        android:layout_below="@+id/downloadSessionSpinner"
+        android:layout_centerHorizontal="true" />
 
     <Button
         android:id="@+id/driveButton"
@@ -38,6 +58,17 @@
         android:layout_height="wrap_content"
         android:typeface="sans"
         android:text="DRIVE"
-        android:layout_marginTop="16dp" />
+        android:layout_marginTop="16dp"
+        android:layout_below="@+id/downloadLabelTextView"
+        android:layout_centerHorizontal="true" />
 
-</LinearLayout>
+    <Button
+        android:id="@+id/downloadResultsBackButton"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="470dp"
+        android:layout_marginBottom="16dp"
+        android:text="POWRÓT"
+        android:typeface="sans"
+        app:layout_constraintBottom_toBottomOf="parent" />
+</RelativeLayout>
