--- a/app/src/main/res/layout/measure_edit.xml
+++ b/app/src/main/res/layout/measure_edit.xml
@@ -9,6 +9,7 @@
         android:id="@+id/measurementTextView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:textColor="#000000"
         android:typeface="sans"
         android:textSize="18sp"
         android:layout_marginTop="8dp" />
