--- a/app/src/main/res/layout/glucose_analysis.xml
+++ b/app/src/main/res/layout/glucose_analysis.xml
@@ -29,6 +29,7 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="72dp"
         android:text="Wybierz numer ID sesji pomiarowej"
+        android:textColor="#000000"
         android:textSize="18sp"
         android:typeface="sans"
         app:layout_constraintEnd_toEndOf="parent"
@@ -65,11 +66,14 @@
         android:id="@+id/resultAnalysisBackButton"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="POWRÓT"
+        android:text="Powrót"
         android:layout_marginTop="16dp"
         android:typeface="sans"
         app:layout_constraintTop_toBottomOf="@+id/glucoseChart"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent" />
+        app:layout_constraintEnd_toEndOf="parent"
+        android:textAllCaps="false"
+        android:textColor="#4E057E"
+        android:background="@drawable/rectangle_field3"/>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
