--- a/app/src/main/res/layout/glucose_analysis.xml
+++ b/app/src/main/res/layout/glucose_analysis.xml
@@ -52,6 +52,19 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/sessionLabelTextView" />
 
+    <TextView
+        android:id="@+id/dateTextView"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="8dp"
+        android:text="Data wykonania pomiaru:"
+        android:textColor="#000000"
+        android:textSize="16sp"
+        android:typeface="sans"
+        app:layout_constraintTop_toBottomOf="@+id/glucoseChart"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent" />
+
     <com.github.mikephil.charting.charts.LineChart
         android:id="@+id/glucoseChart"
         android:layout_width="0dp"
