--- a/app/src/main/res/layout/glucose_analysis.xml
+++ b/app/src/main/res/layout/glucose_analysis.xml
@@ -59,34 +59,37 @@
         android:layout_marginTop="8dp"
         android:text="Data wykonania pomiaru:"
         android:textColor="#000000"
-        android:textSize="16sp"
+        android:textSize="12sp"
         android:typeface="sans"
-        app:layout_constraintTop_toBottomOf="@+id/glucoseChart"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.498"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent" />
+        app:layout_constraintTop_toBottomOf="@+id/glucoseChart" />
 
     <com.github.mikephil.charting.charts.LineChart
         android:id="@+id/glucoseChart"
         android:layout_width="0dp"
-        android:typeface="sans"
         android:layout_height="300dp"
-        android:layout_marginTop="16dp"
-        app:layout_constraintTop_toBottomOf="@+id/sessionSpinner"
+        android:layout_marginTop="8dp"
+        android:typeface="sans"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent" />
+        app:layout_constraintTop_toBottomOf="@+id/sessionSpinner" />
 
     <Button
         android:id="@+id/resultAnalysisBackButton"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginTop="40dp"
+        android:background="@drawable/rectangle_field3"
         android:text="Powrót"
-        android:layout_marginTop="16dp"
-        android:typeface="sans"
-        app:layout_constraintTop_toBottomOf="@+id/glucoseChart"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
         android:textAllCaps="false"
         android:textColor="#4E057E"
-        android:background="@drawable/rectangle_field3"/>
+        android:typeface="sans"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.498"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/glucoseChart" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
