--- a/app/src/main/res/layout/download_results.xml
+++ b/app/src/main/res/layout/download_results.xml
@@ -6,6 +6,15 @@
     android:background="#888A66CD"
     android:padding="16dp">
 
+
+    <ImageView
+        android:id="@+id/iconImageView"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="13dp"
+        android:gravity="center"
+        android:src="@drawable/drive" />
+
     <TextView
         android:id="@+id/headerTextView"
         android:layout_width="match_parent"
@@ -14,25 +23,21 @@
         android:gravity="center"
         android:text="@string/download_results"
         android:textColor="#4E057E"
-        android:textSize="24sp"
+        android:textSize="22sp"
         android:textStyle="bold"
-        android:typeface="sans"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.0"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        android:typeface="sans" />
 
     <TextView
         android:id="@+id/sessionLabelTextView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:typeface="sans"
-        android:text="Wybierz numer ID sesji pomiarowej  do pobrania na Twój prywatny Google Drive w postaci pliku JSON:"
-        android:textColor="#000000"
+        android:layout_below="@+id/headerTextView"
+        android:layout_marginTop="25dp"
         android:gravity="center"
+        android:text="Wybierz numer sesji pomiarowej, której wyniki chcesz pobrać na Twój prywatny Google Drive w postaci pliku JSON:"
+        android:textColor="#000000"
         android:textSize="18sp"
-        android:layout_marginTop="16dp"
-        android:layout_below="@+id/headerTextView" />
+        android:typeface="sans" />
 
     <Spinner
         android:id="@+id/downloadSessionSpinner"
@@ -46,10 +51,11 @@
         android:id="@+id/downloadLabelTextView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Pobieranie"
+        android:text="Uwaga: przed pobraniem wyników upewnij się, że jesteś zalogowany na odpowiednim koncie w usłudze Google Drive."
         android:textColor="#000000"
         android:typeface="sans"
-        android:textSize="20sp"
+        android:textSize="18sp"
+        android:gravity="center"
         android:layout_marginTop="16dp"
         android:layout_below="@+id/downloadSessionSpinner"
         android:layout_centerHorizontal="true" />
