--- a/app/src/main/res/layout/heart_analysis.xml
+++ b/app/src/main/res/layout/heart_analysis.xml
@@ -67,6 +67,17 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/heartRateChart" />
 
+    <ImageView
+        android:id="@+id/iconImageView"
+        android:layout_width="40dp"
+        android:layout_height="35dp"
+        android:layout_marginStart="20dp"
+        android:gravity="center"
+        android:src="@drawable/heartrate"
+        app:layout_constraintBottom_toBottomOf="@+id/headerTextView"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="@+id/headerTextView" />
+
     <com.github.mikephil.charting.charts.LineChart
         android:id="@+id/heartRateChart"
         android:layout_width="0dp"
