Dodanie przycisków "INFO" do dashboardów GlucoseAnalysis i HearAnalysis

--- a/app/src/main/res/layout/heart_analysis.xml
+++ b/app/src/main/res/layout/heart_analysis.xml
@@ -1,4 +1,3 @@
-<?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
@@ -6,7 +5,6 @@
     android:background="#888A66CD"
     android:layout_height="match_parent"
     tools:context=".HeartAnalysis">
-
 
     <TextView
         android:id="@+id/headerTextView"
@@ -20,9 +18,19 @@
         android:textStyle="bold"
         android:typeface="sans"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
+
+    <ImageView
+        android:id="@+id/iconImageView"
+        android:layout_width="40dp"
+        android:layout_height="35dp"
+        android:layout_marginStart="20dp"
+        android:gravity="center"
+        android:src="@drawable/heartrate"
+        app:layout_constraintBottom_toBottomOf="@+id/headerTextView"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="@+id/headerTextView" />
 
     <TextView
         android:id="@+id/sessionLabelTextView"
@@ -34,9 +42,8 @@
         android:textSize="18sp"
         android:typeface="sans"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.406"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@string/heart_analysis"
+        app:layout_constraintTop_toBottomOf="@+id/headerTextView"
         app:layout_constraintTop_toTopOf="parent" />
 
     <Spinner
@@ -44,12 +51,10 @@
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginStart="16dp"
-        android:layout_marginTop="8dp"
         android:layout_marginEnd="16dp"
         android:minHeight="48dp"
         android:typeface="sans"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/sessionLabelTextView" />
 
@@ -63,20 +68,8 @@
         android:textSize="12sp"
         android:typeface="sans"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.498"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/heartRateChart" />
-
-    <ImageView
-        android:id="@+id/iconImageView"
-        android:layout_width="40dp"
-        android:layout_height="35dp"
-        android:layout_marginStart="20dp"
-        android:gravity="center"
-        android:src="@drawable/heartrate"
-        app:layout_constraintBottom_toBottomOf="@+id/headerTextView"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="@+id/headerTextView" />
 
     <com.github.mikephil.charting.charts.LineChart
         android:id="@+id/heartRateChart"
@@ -85,7 +78,6 @@
         android:layout_marginTop="8dp"
         android:typeface="sans"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/sessionSpinner" />
 
@@ -93,16 +85,30 @@
         android:id="@+id/heartRateAnalysisBackButton"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="32dp"
+        android:layout_marginTop="40dp"
         android:background="@drawable/rectangle_field3"
         android:text="Powrót"
         android:textAllCaps="false"
         android:textColor="#4E057E"
         android:typeface="sans"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.498"
+        app:layout_constraintHorizontal_bias="0.207"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/heartRateChart" />
 
+    <Button
+        android:id="@+id/infoButton"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="40dp"
+        android:background="@drawable/rectangle_field3"
+        android:text="INFO"
+        android:textAllCaps="false"
+        android:textColor="#4E057E"
+        android:typeface="sans"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.795"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/heartRateChart" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
