--- a/app/src/main/res/layout/glucose_analysis_info.xml
+++ b/app/src/main/res/layout/glucose_analysis_info.xml
@@ -17,7 +17,7 @@
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Informacje o analizie wyników tętna"
+        android:text="Informacje o analizie wyników glukozy"
         android:layout_gravity="center"
         android:layout_marginTop="16dp"/>
 
