--- a/app/src/main/res/layout/sign_up.xml
+++ b/app/src/main/res/layout/sign_up.xml
@@ -23,7 +23,7 @@
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Sign Up"
+        android:text="Załóż konto"
         android:typeface="sans"
         android:textColor="#ffffff"
         android:textSize="25dp"
@@ -40,7 +40,7 @@
             android:layout_width="match_parent"
             android:layout_height="60dp"
             android:background="@drawable/rectangle_field"
-            android:hint="Enter your email..."
+            android:hint="Wprowadź adres email..."
             android:inputType="textEmailAddress"
             android:typeface="sans"
             android:paddingVertical="15dp"
@@ -68,7 +68,7 @@
             android:layout_height="60dp"
             android:typeface="sans"
             android:background="@drawable/rectangle_field"
-            android:hint="Enter your password..."
+            android:hint="Wprowadź hasło..."
             android:inputType="textPassword"
             android:paddingVertical="15dp"
             android:paddingLeft="60dp"
@@ -94,7 +94,7 @@
             android:layout_width="match_parent"
             android:layout_height="60dp"
             android:background="@drawable/rectangle_field"
-            android:hint="Confirm your password..."
+            android:hint="Potwierdź hasło..."
             android:typeface="sans"
             android:inputType="textPassword"
             android:paddingVertical="15dp"
@@ -115,7 +115,7 @@
         android:id="@+id/register"
         android:layout_width="match_parent"
         android:layout_height="50dp"
-        android:text="Sign Up"
+        android:text="Załóż konto"
         android:typeface="sans"
         android:textColor="#ffffff"
         android:layout_marginTop="20dp"
@@ -134,7 +134,7 @@
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Already registered?"
+        android:text="Posiadasz konto?"
         android:typeface="sans"
         android:textSize="18dp"/>
     <TextView
@@ -142,7 +142,7 @@
         android:layout_width="wrap_content"
         android:typeface="sans"
         android:layout_height="wrap_content"
-        android:text="Sign In"
+        android:text="Zaloguj się"
         android:layout_marginLeft="10dp"
         android:textStyle="bold"
         android:textSize="20dp"
