--- a/app/src/main/res/layout/glucose_analysis_info.xml
+++ b/app/src/main/res/layout/glucose_analysis_info.xml
@@ -1,23 +1,32 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout
+<ScrollView
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:orientation="vertical"
     android:padding="16dp">
 
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="vertical">
+
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="INFO"
-        android:textSize="20sp"
+        android:textSize="18sp"
         android:textStyle="bold"
+        android:textColor="#4E057E"
+        android:typeface="sans"
         android:layout_gravity="center"/>
 
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Informacje o analizie wyników glukozy"
+        android:text="@string/glucose_details"
+        android:typeface="sans"
+        android:textColor="#000000"
         android:layout_gravity="center"
         android:layout_marginTop="16dp"/>
 
@@ -26,6 +35,10 @@
         android:layout_height="wrap_content"
         android:text="Zamknij"
         android:id="@+id/closeButton"
+        android:typeface="sans"
         android:layout_gravity="center"
+        android:background="@drawable/rectangle_field3"
+        android:textAllCaps="false"
         android:layout_marginTop="16dp"/>
 </LinearLayout>
+    </ScrollView>
