--- a/app/src/main/res/layout/sign_in.xml
+++ b/app/src/main/res/layout/sign_in.xml
@@ -24,7 +24,7 @@
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Sign In"
+        android:text="Zaloguj się"
         android:typeface="sans"
         android:textColor="#ffffff"
         android:textSize="30dp"
@@ -39,7 +39,7 @@
             android:id="@+id/email"
             android:layout_width="match_parent"
             android:layout_height="50dp"
-            android:hint="Enter your email..."
+            android:hint="Wprowadź adres email..."
             android:paddingVertical="10dp"
             android:textColor="#000000"
             android:textStyle="bold"
@@ -66,7 +66,7 @@
             android:id="@+id/password"
             android:layout_width="match_parent"
             android:layout_height="50dp"
-            android:hint="Enter your password..."
+            android:hint="Wprowadź hasło..."
             android:paddingVertical="10dp"
             android:textColor="#000000"
             android:typeface="sans"
@@ -88,7 +88,7 @@
         android:id="@+id/login"
         android:layout_width="match_parent"
         android:layout_height="50dp"
-        android:text="Sign in"
+        android:text="Zaloguj się"
         android:typeface="sans"
         android:textColor="#ffffff"
         android:layout_marginTop="20dp"
@@ -108,14 +108,14 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:typeface="sans"
-            android:text="Don't have an account?"
+            android:text="Nie posiadasz konta?"
             android:textSize="16dp" />
 
         <TextView
             android:id="@+id/signUpTextV"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Register"
+            android:text="Zarejestruj się"
             android:layout_marginLeft="10dp"
             android:typeface="sans"
             android:textStyle="bold"
